Added board function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(Tic-Tac-Toe VERSION 0.1.0 LANGUAGES C CXX)
 
-add_executable(Tic-Tac-Toe main.cpp)
+add_executable(Tic-Tac-Toe board.cpp)
 
